# django

./: .gitignore  CONTRIBUTORS.md  README.MD  logging.toml  master_logging.toml  pyproject.toml
configs/: setting-template.ini
kernel/: asgi.py  urls.py  wsgi.py
kernel/settings/: base.py  development.py  production.py
kernel/settings/services/: __init__.py  backend.py  database.py  log_conf.py
